--- a/doc-gen/articles/toc.yml
+++ b/doc-gen/articles/toc.yml
@@ -1,2 +1,8 @@
 - name: Introduction
   href: intro.md
+- name: Some useful functions
+  href: Useful functions.md
+- name: Create a simple kernel
+  href: Create a simple kernel.md
+- name: Run your first kernel
+  href: Run your first kernel.md
