--- a/examples/AmplifierExamples/AmplifierExamples.csproj
+++ b/examples/AmplifierExamples/AmplifierExamples.csproj
@@ -9,6 +9,10 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+  </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\..\src\Amplifier.Net\Amplifier.csproj" />
   </ItemGroup>
